fix z-index on toolbar

--- a/src/templates/blog-post.css
+++ b/src/templates/blog-post.css
@@ -78,6 +78,7 @@ textarea:focus {
   left: 0;
   right: 0;
   height: 50px;
+  z-index: 1000;
 }
 
 .BlogPostToolbar .actions {
